# twitter-bot

./: .env.example  .gitignore  .replit  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-import-logging-import-json-import-os-import-random-from-datetime-import-datetime-from-typing-im-1759742551365_1759742551366.txt  Pasted-import-logging-import-time-from-typing-import-List-Optional-Dict-import-tweepy-from-imp-1759742515674_1759742515674.txt  Pasted-import-sqlite3-import-threading-from-contextlib-import-contextmanager-from-datetime-import-dateti-1759742471715_1759742471721.txt  Pasted-mport-logging-from-typing-import-Dict-from-openai-import-OpenAI-from-import-config-logg-1759742499209_1759742499209.txt
bot/: config.py
bot/core/: mention_handler.py  quote_poster.py  sentiment_analyzer.py
bot/utils/: database.py  openai_helper.py  twitter_api.py
data/: quotes.json
